--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "expo-navigation-bar": "~2.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "jotai": "^2.0.4",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
     "react-native-paper": "^5.6.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
