fix: change textinput to a more performant one along with different styling

--- a/eas.json
+++ b/eas.json
@@ -8,7 +8,6 @@
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease"
-      
       },
       "distribution": "internal",
       "ios": {
@@ -17,11 +16,15 @@
     },
     "preview": {
       "distribution": "internal",
-      "ios": {
-        "resourceClass": "m-medium"
+      "android": {
+        "buildType": "apk",
+        "image": "latest"
       }
     },
     "production": {
+      "android": {
+        "buildType": "apk"
+      },
       "ios": {
         "resourceClass": "m-medium"
       }
