--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "date-fns": "^2.29.3",
     "expo": "~48.0.10",
     "expo-dev-client": "~2.2.1",
@@ -21,11 +23,11 @@
     "expo-navigation-bar": "~2.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
-    "jotai": "^2.0.4",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.6.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
