--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.0.1",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -20,8 +22,10 @@
     "expo": "~48.0.10",
     "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
+    "expo-haptics": "~12.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-navigation-bar": "~2.1.1",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "lottie-react-native": "5.1.4",
@@ -33,6 +37,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-sticky-parallax-header": "^1.0.0-rc.9",
+    "react-native-toast-message": "^2.1.6",
     "yup": "^1.1.1",
     "zustand": "^4.3.7"
   },
