--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.1",
     "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-firebase/app": "^17.4.3",
+    "@react-native-firebase/messaging": "^17.4.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -20,9 +24,11 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "date-fns": "^2.29.3",
     "expo": "~48.0.10",
+    "expo-constants": "~14.2.1",
     "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
     "expo-haptics": "~12.2.1",
+    "expo-image": "~1.0.0",
     "expo-image-picker": "~14.1.1",
     "expo-navigation-bar": "~2.1.1",
     "expo-secure-store": "~12.1.1",
@@ -33,19 +39,29 @@
     "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-gifted-chat": "^2.1.0",
     "react-native-paper": "^5.6.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-sticky-parallax-header": "^1.0.0-rc.9",
     "react-native-toast-message": "^2.1.6",
+    "react-query": "^3.39.3",
+    "socket.io-client": "^4.6.1",
     "yup": "^1.1.1",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.7",
+    "expo-linking": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "patch-package": "^7.0.0",
     "typescript": "^4.9.4"
+  },
+  "overrides": {
+    "react-native-gifted-chat": {
+      "use-memo-one": "1.1.3"
+    }
   },
   "private": true
 }
