--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "expo-haptics": "~12.2.1",
     "expo-image": "~1.0.0",
     "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
     "expo-navigation-bar": "~2.1.1",
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "lodash": "^4.17.21",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -49,11 +51,11 @@
     "react-query": "^3.39.3",
     "socket.io-client": "^4.6.1",
     "yup": "^1.1.1",
-    "zustand": "^4.3.7",
-    "expo-linking": "~4.0.1"
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.194",
     "@types/react": "~18.0.14",
     "patch-package": "^7.0.0",
     "typescript": "^4.9.4"
