feat: cache app images on startup

--- a/app.json
+++ b/app.json
@@ -17,6 +17,10 @@
       "supportsTablet": true,
       "googleServicesFile": "./GoogleService-Info.plist"
     },
+    "androidNavigationBar": {
+      "barStyle": "dark-content",
+      "backgroundColor": "#ffffff"
+    },
     "android": {
       "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
