--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "@shopify/flash-list": "1.4.0",
     "date-fns": "^2.29.3",
     "expo": "~48.0.10",
     "expo-asset": "~8.9.1",
@@ -37,6 +38,7 @@
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
