--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.6",
     "@hookform/resolvers": "^3.0.1",
     "@notifee/react-native": "^7.7.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/netinfo": "9.3.7",
     "@react-native-firebase/app": "^17.4.3",
     "@react-native-firebase/messaging": "^17.4.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -29,6 +32,8 @@
     "expo-asset": "~8.9.1",
     "expo-constants": "~14.2.1",
     "expo-dev-client": "~2.2.1",
+    "expo-document-picker": "~11.2.2",
+    "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-haptics": "~12.2.1",
     "expo-image": "~1.0.0",
