--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@fawazahmed/react-native-read-more": "^3.0.3",
     "@gorhom/bottom-sheet": "^4.4.6",
     "@hookform/resolvers": "^3.0.1",
     "@notifee/react-native": "^7.7.1",
